fixed resume overflow on big screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1662,8 +1662,11 @@ input, select, textarea {
 
 		/* resume embed */
 		.embed-resume {
-			width: 39vw;
+			max-width: 100%;
+			width: 100%;
+			max-height: 100%;
 			height: 30vw;
+			overflow: auto;
 			display: flex;
 			justify-content: center;
 			margin-top: 10px;
